# gtex_gene_expression

./: .gitignore  LICENSE  README.md  env.yaml  pyproject.toml  requirements.txt
gtex_biomarkers/: __init__.py  config.py  data.py  evaluation.py  labels.py  models.py  utils.py
gtex_biomarkers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01_data_loading_exploration.ipynb  02_liver_steatosis_binary.ipynb  03_nlp_imputation.ipynb  04_liver_multicategory.ipynb  05_all_tissue_models.ipynb  06_summary_baseline.ipynb  07_rf_variance_filter.ipynb  08_comparison.ipynb  09_confounder_analysis.ipynb  10_gene_level_analysis.ipynb  10_tissue_pc_regression.ipynb  11_pc_gene_importance.ipynb  12_pathway_enrichment.ipynb
scripts/: exploratory.ipynb
